FullQa New/src/objects/Cancellation__c.object
<CustomObject>
    <description>Used to track cancellation of customer products</description>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CancelRequests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AccountingComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AccountingComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSaleType__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Deprecated) AcctSaleType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acctg_User__c</fullName>
        <label>Acctg User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcknowledgementText__c</fullName>
        <defaultValue>&quot;your Avalara contract&quot;</defaultValue>
        <description>This text is inserted into the Cancellation Acknowledgement email that is sent to the customer when &quot;SendAcknowledgement&quot; is checked.  It is inserted into the line: &quot;We have received your notice to cancel { custom text goes here } and are processing it now.&quot;</description>
        <label>AcknowledgementText</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignToCAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssigntoCAM</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>CAM</value>
            </filterItems>
            <filterItems>
                <field>User.RoleName__c</field>
                <operation>contains</operation>
                <value>CAM</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cancellations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bankrupt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Cancellation is a result of an existing customer going bankrupt.</description>
        <inlineHelpText>Checked if the Cancellation is a result of an existing customer going bankrupt.</inlineHelpText>
        <label>Bankrupt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAM_Manager__c</fullName>
        <label>CAM Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CAM_Manager_email__c</fullName>
        <formula>AssignToCAM__r.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAM Manager email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAM_Result__c</fullName>
        <label>CAM Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Rescue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if a Cancellation record includes Calc</description>
        <inlineHelpText>Checked if a Cancellation record includes Calc</inlineHelpText>
        <label>Calc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CanCalc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CanCalc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CanCerts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CanCerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CanGoldSpt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CanGoldSpt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CanISPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CanISPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CanReturns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CanReturns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CanSST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CanSST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CanSandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CanSandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CanTaxServices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CanTaxServices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CancelDateReceived__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CancelResult__c</fullName>
        <label>Cancel Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancelled at Next Renewal</fullName>
                </value>
                <value>
                    <fullName>Rescued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CancelWhat__c</fullName>
        <label>CancelWhat</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calc</fullName>
                </value>
                <value>
                    <fullName>Returns</fullName>
                </value>
                <value>
                    <fullName>Returns - SST</fullName>
                </value>
                <value>
                    <fullName>vReturns</fullName>
                </value>
                <value>
                    <fullName>Certs</fullName>
                </value>
                <value>
                    <fullName>Avatax OnSite</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>Tax Services</fullName>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Gold Support</fullName>
                </value>
                <value>
                    <fullName>Add-On Connector</fullName>
                </value>
                <value>
                    <fullName>LaserBridge</fullName>
                </value>
                <value>
                    <fullName>1099</fullName>
                </value>
                <value>
                    <fullName>OEM FTV</fullName>
                </value>
                <value>
                    <fullName>TaxMatrix</fullName>
                </value>
                <value>
                    <fullName>W9</fullName>
                </value>
                <value>
                    <fullName>PPT</fullName>
                </value>
                <value>
                    <fullName>TrustFile</fullName>
                </value>
                <value>
                    <fullName>Excise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CancellationReasonPrimary__c</fullName>
        <description>The primary reason that caused the Customer to Cancel</description>
        <inlineHelpText>The primary reason that caused the Customer to Cancel</inlineHelpText>
        <label>Cancellation Reason (Primary)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason_Short__c</fullName>
        <label>Cancellation Reason (Short)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[NA] Cancelled for Non-Payment</fullName>
                </value>
                <value>
                    <fullName>[Avoidable] Buyer&apos;s Remorse</fullName>
                </value>
                <value>
                    <fullName>[Avoidable] Poor CAM Service</fullName>
                </value>
                <value>
                    <fullName>[Avoidable] Poor Compliance Support</fullName>
                </value>
                <value>
                    <fullName>[Avoidable] Poor Product</fullName>
                </value>
                <value>
                    <fullName>[Avoidable] Poor System Availability</fullName>
                </value>
                <value>
                    <fullName>[Avoidable] Poor Technical Support</fullName>
                </value>
                <value>
                    <fullName>[Avoidable] Prod Not As Promised</fullName>
                </value>
                <value>
                    <fullName>[Avoidable] Unable to Install/Use Prod</fullName>
                </value>
                <value>
                    <fullName>[Unavoidable] Company Acquired</fullName>
                </value>
                <value>
                    <fullName>[Unavoidable] No Tax Calc Requirement</fullName>
                </value>
                <value>
                    <fullName>[Unavoidable] Out of Business</fullName>
                </value>
                <value>
                    <fullName>[Unavoidable] Project Cancelled</fullName>
                </value>
                <value>
                    <fullName>[*] No Reason Given</fullName>
                </value>
                <value>
                    <fullName>[Unavoidable] No Longer Require</fullName>
                </value>
                <value>
                    <fullName>[Unavoidable] No Longer Compatible</fullName>
                </value>
                <value>
                    <fullName>[Avoidable] Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>[NA] Change of Contract</fullName>
                </value>
                <value>
                    <fullName>[Unavoidable] Business Restructured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Timer__c</fullName>
        <description>The length of time (in days) since the Cancellation Object was created in SF</description>
        <formula>now()- CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The length of time (in days) since the Cancellation Object was created in SF</inlineHelpText>
        <label>Cancellation Timer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CancelledByAvalara__c</fullName>
        <description>Reason Coding for Cancellations that are initiated by Avalara</description>
        <inlineHelpText>Reason Coding for Cancellations that are initiated by Avalara</inlineHelpText>
        <label>Cancelled By Avalara</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Payment</fullName>
                </value>
                <value>
                    <fullName>Breach</fullName>
                </value>
                <value>
                    <fullName>Expiration</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cannot_Be_Recalled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cannot Be Recalled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancellation CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommentAcctg__c</fullName>
        <label>Comment Acctg</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentCAM__c</fullName>
        <label>Comment CAM</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentCompliance__c</fullName>
        <label>CommentCompliance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentISPI__c</fullName>
        <label>CommentISPI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentSiteMgr__c</fullName>
        <label>CommentSiteMgr</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentTenSoft__c</fullName>
        <label>CommentTenSoft</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentVCert__c</fullName>
        <label>CommentVCert</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentVReturn__c</fullName>
        <label>CommentVReturn</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ComplianceComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ComplianceComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_User__c</fullName>
        <label>Compliance User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start__c</fullName>
        <formula>Account__r.AccountCPOStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account CPO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Comments__c</fullName>
        <label>Customer Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CancelRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateCancelledCompliance__c</fullName>
        <label>DateCancelledCompliance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateCancelledISPI__c</fullName>
        <label>Date Cancelled by ISPI</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateCancelledTenSoft__c</fullName>
        <label>DateCancelledTenSoft</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateCancelledVCert__c</fullName>
        <label>DateCancelledVCert</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateCancelledVReturn__c</fullName>
        <label>DateCancelledVReturn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateCancelledinSM__c</fullName>
        <label>DateCancelledinSM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateCustomerAckSent__c</fullName>
        <label>DateCustomerAckSent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_Accounting__c</fullName>
        <label>Date Assigned to Accounting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_CAM__c</fullName>
        <label>Date Assigned to CAM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_Ops__c</fullName>
        <label>Date Assigned to Ops</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled_in_Accounting__c</fullName>
        <label>Date Cancelled in Accounting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Req_Closed__c</fullName>
        <label>Date Request Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debooking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debooking?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elapsed_Days__c</fullName>
        <formula>IF(Date_Req_Closed__c &gt;DATE(2000,01,01),today()-CancelDateReceived__c,Date_Req_Closed__c - CancelDateReceived__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISPI_Comment__c</fullName>
        <label>ISPI Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ISPI_User__c</fullName>
        <label>ISPI User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastFilingDate__c</fullName>
        <description>Represents the last month that we need to file returns for this customer.  If this is an AvaFile cancellation, this field is required.</description>
        <inlineHelpText>Represents the last month that we need to file returns for this customer.  If this is an AvaFile cancellation, this field is required.</inlineHelpText>
        <label>Last Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastFilingMonth__c</fullName>
        <description>The last month that we will file returns for this customer</description>
        <inlineHelpText>The last month that we will file returns for this customer</inlineHelpText>
        <label>Last Filing Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastPaymentDate__c</fullName>
        <inlineHelpText>Sabrina should be the only person to populate this field based on what she sees in GP</inlineHelpText>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_of_Paid_Service__c</fullName>
        <label>Last Date of Paid Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Transaction__c</fullName>
        <description>Deprecated and delted 7.2.18 for LastTransaction__c delete on Account IBST-10103
3 Jul 2018 - Undeleted</description>
        <formula>Account__r.LastTransaction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Deprecated) Last Transaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NextRenewalDate__c</fullName>
        <description>The date that the customer&apos;s next service term begins.</description>
        <inlineHelpText>The date that the customer&apos;s next service term begins.</inlineHelpText>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OnSiteComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OnSiteComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpenGoLives__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box is checked if there are 1 or more Open GoLives associated with the same Account as the Cancellation record.</description>
        <inlineHelpText>This box is checked if there are 1 or more Open GoLives associated with the same Account as the Cancellation record.</inlineHelpText>
        <label>(Depracated) Open GoLive(s)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ops_Notes__c</fullName>
        <label>Ops Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OriginalSaleDate__c</fullName>
        <description>Deprecated and deleted via IBST-10103 for deletion of Sign_Up_Date__c on Account
3 Jul 2018 - Undeleted</description>
        <formula>Account__r.Sign_Up_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Deprecated) OriginalSaleDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Order_Date__c</fullName>
        <description>Deprecated and deleted via IBST-10103 for deletion of Sign_Up_Date__c on Account
3 Jul 2018 - Undeleted</description>
        <formula>OriginalSaleDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Deprecated) Original Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CancelRequests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerManager__c</fullName>
        <formula>Account__r.Owner.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <description>Lists the products in the Cancel What field in a different format</description>
        <formula>IF(AND(INCLUDES( CancelWhat__c , &quot;Calc&quot;),INCLUDES( CancelWhat__c , &quot;Returns&quot;)),&quot;Calc; Returns&quot;,IF( INCLUDES( CancelWhat__c , &quot;Calc&quot;),&quot;Calc&quot;,IF( INCLUDES( CancelWhat__c , &quot;Returns&quot;),&quot;Returns&quot;,&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lists the products in the Cancel What field in a different format</inlineHelpText>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recall_Date__c</fullName>
        <label>Recall Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reclassified328__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reclassified328</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refund_Reason__c</fullName>
        <label>Refund Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Within 60 Days of Sale</fullName>
                </value>
                <value>
                    <fullName>Contract Terms</fullName>
                </value>
                <value>
                    <fullName>Customer Concession</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Refund</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_to_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Cancellations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Returns__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if a Cancellation record contains Returns</description>
        <inlineHelpText>Checked if a Cancellation record contains Returns</inlineHelpText>
        <label>Returns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMOrder_Reference__c</fullName>
        <label>SM Order Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Save_Plan__c</fullName>
        <description>Purpose: Track the CAM effort to save the account for a given cancellation
Integrated: No 
Change: Level 0 
Custodian: Loyalty / Andrea Anderson</description>
        <inlineHelpText>Use this field to documen what you are doing / what you did do to save this customer account</inlineHelpText>
        <label>Save Plan</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SendCustomerAck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, sends email to customer confirming receipt of cancellation.</description>
        <label>SendCustomerAck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceTermDate__c</fullName>
        <label>ServiceTermDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Termination_Date__c</fullName>
        <inlineHelpText>Clay should be the only person to populate this field based on the Last Payment Recieved Date and the Service Renewal Date reflected in TenSoft</inlineHelpText>
        <label>Service Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SiteManagerComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SiteManagerComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SiteManagerStatus__c</fullName>
        <formula>&quot;Deprecated&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status in SiteManager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteManager_ID__c</fullName>
        <formula>Account__r.SiteManagerID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SiteManager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteMgr_User__c</fullName>
        <label>SiteMgr User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned Customer Loyalty</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Assigned TenSoft</fullName>
                </value>
                <value>
                    <fullName>Service Cancellation in Progress</fullName>
                </value>
                <value>
                    <fullName>Cancellation Complete</fullName>
                </value>
                <value>
                    <fullName>Rescued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TSK_Label__c</fullName>
        <formula>&quot;AvaTask:  Process Cancellation&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TSK Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxSvcsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TaxSvcsComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TenSoftComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TenSoftComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TenSoft_User__c</fullName>
        <label>TenSoft User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow__c</fullName>
        <label>Workflow</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending CAM</fullName>
                </value>
                <value>
                    <fullName>Pending Ops</fullName>
                </value>
                <value>
                    <fullName>Pending Final Deprovisioning</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora_Amendment__c</fullName>
        <label>Zuora Amendment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>object_version__c</fullName>
        <defaultValue>101</defaultValue>
        <label>object version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vCertComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>vCertComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vCert_User__c</fullName>
        <label>vCert User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vReturnsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>vReturnsComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vReturns_User__c</fullName>
        <label>vReturns User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>(Deprecated) Cancellation</label>
    <listViews>
        <fullName>All_Pending_Cancellations</fullName>
        <columns>Account__c</columns>
        <columns>AssignToCAM__c</columns>
        <columns>NAME</columns>
        <columns>SiteManager_ID__c</columns>
        <columns>CancelDateReceived__c</columns>
        <columns>CancelWhat__c</columns>
        <columns>Customer_Contact__c</columns>
        <columns>Refund__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workflow__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>All Pending Cancellations</label>
    </listViews>
    <listViews>
        <fullName>All_Pending_Cancellations1</fullName>
        <columns>Account__c</columns>
        <columns>AssignToCAM__c</columns>
        <columns>NAME</columns>
        <columns>SiteManager_ID__c</columns>
        <columns>CancelDateReceived__c</columns>
        <columns>CancelWhat__c</columns>
        <columns>Customer_Contact__c</columns>
        <columns>Refund__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workflow__c</field>
            <operation>equals</operation>
            <value>Recalled</value>
        </filters>
        <label>All Recalled Cancellations</label>
    </listViews>
    <listViews>
        <fullName>All_Pending_Cancellations2</fullName>
        <columns>Account__c</columns>
        <columns>AssignToCAM__c</columns>
        <columns>NAME</columns>
        <columns>SiteManager_ID__c</columns>
        <columns>CancelDateReceived__c</columns>
        <columns>CancelWhat__c</columns>
        <columns>Customer_Contact__c</columns>
        <columns>Refund__c</columns>
        <columns>Workflow__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workflow__c</field>
            <operation>equals</operation>
            <value>Recalled</value>
        </filters>
        <label>All Pending Cancellations</label>
    </listViews>
    <listViews>
        <fullName>Batavia</fullName>
        <columns>NAME</columns>
        <columns>Workflow__c</columns>
        <columns>CancelWhat__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workflow__c</field>
            <operation>notEqual</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>CancelWhat__c</field>
            <operation>equals</operation>
            <value>Avatax OnSite</value>
        </filters>
        <label>Batavia</label>
    </listViews>
</CustomObject>